# realtime-social-dilemma

./: .gitignore  README.md  main.py  pyproject.toml
data/: README.md
data/processed/: main_demographics.csv  main_pd_data.csv  main_pd_willingness_data.csv  main_ra_params.csv  main_svo_params.csv  main_trust_data.csv  pilot_demographics.csv  pilot_pd_data.csv  pilot_ra_params.csv  pilot_svo_params.csv
data/raw/exp1_202302/: lottery_list.csv
docs/: data_dictionary.md  realtime_draft_SI_2026_v6.docx  realtime_draft_main_2026_v5_kameda2.docx  regression_analysis_specification.md  si_captions.md  si_sections_1_2.md
output/: README.md
output/tables/: regression_main_rt_second_after_c.csv  regression_main_rt_twostep.csv  regression_main_sm_all.csv  regression_main_sq_first.csv  regression_main_sq_second_after_c.csv  regression_pilot_rt_second_after_c.csv  regression_pilot_rt_twostep.csv  regression_pilot_sm_all.csv  regression_summary.csv
src/: README.md  analysis_regression.py  analysis_rt_potential_coop.py  analysis_rt_potential_coop_pilot.py  analysis_sm_vs_rt_first_mover.py  analysis_svo_second_movers.py  fig2A_mutual_cooperation.py  fig2A_mutual_cooperation_pilot.py  fig2B_cooperation_rate.py  fig2B_cooperation_rate_pilot.py  fig3_decision_time.py  fig3_decision_time_pilot.py  fig_2A_mutual_cooperation.py  fig_2B_cooperation_rate.py  fig_3_decision_time.py  fig_s1_pilot.py  fig_s1_pilot_cooperation_rate_pair_and_individual.py  fig_s2_decision_time_pilot.py  fig_s3_decision_time_main.py
src/data/: __init__.py  loader.py  utils.py
(+21 files in other folders)
