[project]
name = "claude-analysis"
version = "0.1.0"
description = "Real-Time Prisoner's Dilemma analysis"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
fig2 = "src.fig_2B_cooperation_rate:main"
fig2a = "src.fig_2A_mutual_cooperation:main"
